<resources>
    <string name="add">Add</string>
    <string name="app_name">Taedium</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="saveclose">Save and Close</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="main_title">Taedium</string>
    <string name="filter_title">I want to specify the:</string>
    <string name="people_dialog_title">People Filters</string>
    <string name="environment_dialog_title">Environment Filters</string>
    <string name="location_dialog_title">Location Filters</string>
    <string name="duration_dialog_title">Duration Filters</string>
    <string name="cost_dialog_title">Cost Filters</string>
    <string name="flag_dialog_title">Flag Activity</string>
    <string name="cbAddIndoor">Indoors</string>
    <string name="cbAddOutdoor">Outdoors</string>
    <string name="cbAddAroundTown">Around the town</string>
    <string name="rbAddAllAges">All Ages</string>
    <string name="rbAddKidsOnly">Kids Only</string>
    <string name="rbAddAdultOnly">Adult Only</string>
    <string name="rbAddCostFree">Free</string>
    <string name="rbAddCostFlat">Flat rate</string>
    <string name="rbAddCostPerPerson">Per person rate</string>
    <string name="rbAddLocationDisabled">There is no specific location</string>
    <string name="rbAddLocationEnabled">Add a specific location</string>
    <string name="bLogin">Login</string>
    <string name="bLoginRegister"><u>Login/Register</u></string>
    <string name="bAdd">Add Activity</string>
    <string name="bRegister">Register</string>
    <string name="bTaedium">Cure my\nBoredom</string>
    <string name="add_activity_title">Add an Activity</string>
    <string name="spNumPeople">Select number of people</string>
    <string name="bAddActivity">Add an Activity</string>
    <string name="bEnterAddress">Enter Address</string>
    <string name="bMore">More</string>
    <string name="bLess">Less</string>
    <string name="bUpVote">Like</string>
    <string name="bDownVote">Dislike</string>
    <string name="bFlag">Flag</string>
    <string name="bCreateAccount">Create one now</string>
    <string name="bDOB">Click here to enter</string>
    <string name="bRegisterAccount">Create Account</string>
    <string name="bShowMap">Show Map</string>
    <string name="bGetDirections">Get Directions</string>
    <string name="bMapFinished">Use Selected Location</string>
    <string name="bSubmitFlag">Submit Flag</string>
    <string name="bAddNewTag">Add Tags Manually</string>
    <string name="bBack">Back</string>
    <string name="bNext">Next</string>
    <string name="bSubmit">Submit</string>
    <string name="tvAddName">Name *</string>
    <string name="tvAddDescription">Description</string>
    <string name="tvAddPeople">People</string>
    <string name="tvAddMinPeople">Minimum People</string>
    <string name="tvAddMaxPeople">Maximum People</string>
    <string name="tvAddMinDuration">Minimum Duration (minutes)</string>
    <string name="tvAddMaxDuration">Maximum Duration (minutes)</string>
    <string name="tvAddCost">Cost ($)</string>
    <string name="tvAddMyLocation">Use My Location</string>
    <string name="tvAddUseMap">Use Map</string>
    <string name="tvAddSpecifyAddress">Enter Address</string>
    <string name="tvAddAutoTag">Do any of these tags apply?</string>
    <string name="tvAddManualTag">You can also,</string>
    <string name="tvAddManualTagNoAuto">Sorry, we couldn\'t find any tags that match your activity.</string>
    <string name="tvNumPeople">Number of People</string>
    <string name="tvChildSafe">Suitable for Children</string>
    <string name="tvDuration">Duration</string>
    <string name="tvIndoor">Indoor</string>
    <string name="tvOutdoor">Outdoor</string>
    <string name="tvTown">Around the Town</string>
    <string name="tvEnableLocation">Enable Location</string>
    <string name="tvRadius">Radius (km)</string>
    <string name="tvMinDuration">Min Duration (minutes)</string>
    <string name="tvMaxDuration">Max Duration (minutes)</string>
    <string name="tvMinCost">Min Cost</string>
    <string name="tvMaxCost">Max Cost</string>
    <string name="tvKidFriendlyLabel">Kid friendly</string>
    <string name="tvAdultsOnlyLabel">Must be an adult</string>
    <string name="tvTODLabel1">Time of Day: </string>
    <string name="tvTODLabel2"> to </string>
    <string name="tvLocationLabel">Location</string>
    <string name="tvStreetNumber">Street Number</string>
    <string name="tvStreetName">Street Name</string>
    <string name="tvCity">City</string>
    <string name="tvProvince">Province</string>
    <string name="tvAddlInfo"><u>Additional Information</u></string>
    <string name="tvAddRecNumPeople">People</string>
    <string name="tvAddRecCost">Cost</string>
    <string name="tvAddRecDuration">Duration</string>
    <string name="tvUserName">Username</string>
    <string name="tvPassword">Password</string>
    <string name="tvPasswordConfirm">Confirm Password</string>
    <string name="tvCreateAccount">Don\'t have an account?</string>
    <string name="tvEmail">Email</string>
    <string name="tvDOB">Date of Birth</string>
    <string name="tvStartTime">Start Time:</string>
    <string name="tvEndTime">End Time:  </string>
    <string name="tvReason">Reason:</string>
    <string name="tvReasonExample">Examples: abusive, sexist, racist, duplicate, etc.</string>
    <string name="tvAddTagsLabel">Tags *</string>
    <string name="tvAddTagsFormatDescription">Format: tag1, tag2, tag3, ..."</string>
    <string name="tvAddStarredRequired">Fields marked with * are required fields.</string>
    <string name="tvRegFieldsMandatory">All fields are mandatory</string>
    <string name="tvNotLoggedIn">This page is all about you! We\'ll need you to log in so we can show you your score, activities you\'ve added, and things you\'ve liked!\n\nDon\'t have an account? Why not make one now?</string>
    <string name="tvLoggedInAs">Hi %s!</string>
    <string name="tvScoreboardHeader">Scoreboard</string>
    <string name="mnuProfile">Profile</string>
    <string name="mnuLogin">Login</string>
    <string name="mnuLogout">Logout</string>
    <string name="mnuRegister">Register</string>
    <string name="mnuHome">Home</string>
    <string name="msgLoginFailed">Your username/password was incorrect or your network connection is wonky. Please try again.</string>
    <string name="msgLoginSuccess">Login successful.</string>
    <string name="msgRecommendationNameRqd">You must enter a name for your new activity in order for it to be added.</string>
    <string name="msgRecommendationTagRqd">You must enter at least one tag for your new activity in order for it to be added.</string>
    <string name="msgAddSuccess">Your activity has been added to the Taedium database.</string>
    <string name="msgAddFailure">Adding activity failed. Please ensure fields are correctly completed and you have an Internet connection.</string>
    <string name="msgNoRecommendationsFound">No recommendations were found. Please check your network connection.</string>
    <string name="msgMustLogin">You must be logged in to complete this action.</string>
    <string name="msgLoggedIn">Welcome to Taedium %s.</string>
    <string name="msgRegisterAllFieldsMandatory">Please complete all fields in order to register.</string>
    <string name="msgPasswordsNotMatching">The two password fields do not match. Please correct this and try again.</string>
    <string name="msgRegistered">You have successfully created an account with Taedium.</string>
    <string name="msgRegistrationFailed">Account creation failed. Please check your network connection and try again.</string>
    <string name="msgLoggedOut">Logout successful.</string>
    <string name="msgLikeFailed">Like failed due to problem contacting server. Please check your network connection.</string>
    <string name="msgDislikeFailed">Dislike failed due to problem contacting server. Please check your network connection.</string>
    <string name="msgFlagFailed">Flag failed due to problem contacting server.</string>
    <string name="msgFlagSuccess">Activity flagged</string>
    <string name="msgRemoveLikeFailed">Removing like failed due to problem contacting server.</string>
    <string name="msgRemoveDislikeFailed">Removing dislike failed due to problem contacting server.</string>
    <string name="msgCannotUnflag">You have flagged this activity and are not allowed to un-flag it.</string>
    <string name="msgCannotGetStats">Sorry, we are unable to get your stats at this time. Please make sure you are logged in and connected to the Internet.</string>
    <string name="msgLoadingActivity">Loading Activity...</string>
    <string name="msgLoadingActivities">Loading Activities...</string>
    <string name="msgLoadingProfile">Loading your profile...</string>
    <string name="msgNoActivitesFound">No activities found. Please check your network connection.</string>
    <string name="stFor">For</string>
    <string name="stTo">to</string>
    <string name="stFrom">From</string>
    <string name="stTotal">total</string>
    <string name="stPerPerson">per person</string>
    <string name="stMinute">minute</string>
    <string name="stMinutes">minutes</string>
    <string name="stHour">hour</string>
    <string name="stHours">hours</string>
    <string name="stIndoor">Indoors</string>
    <string name="stOutdoor">Outdoors</string>
    <string name="stAroundTown">Town</string>
    <string name="stKidFriendly">Kids</string>
    <string name="stLocationEnabled">Nearby</string>
    <string name="stDistanceUnit">km</string>
    <string name="stAny">Any</string>
    <string name="stMax">Max</string>
    <string name="stFree">Free</string>
    <string name="default_radius">5</string>
    <string name="default_start_time">00:00</string>
    <string name="default_end_time">23:59</string>
    <string name="default_num_people">1</string>
    <string name="default_city">Waterloo</string>
    <string name="default_province">ON</string>
    <string name="help_add_name_title"><b>Name and Description</b></string>
    <string name="help_add_name">This page contains basic information about the activity.\n\nName: (Required) Enter a short descriptive name for the activity.\n\nDescription: In a paragraph or two describe how to carry out the activity. You can also type or paste links into this box.</string>
    <string name="help_add_people_title">People and Age</string>
    <string name="help_add_people">This page contains information relating to people.\n\nNumber of People: Enter a the minimum and maximum number of people that can perform this activity at the same time.\n\nAge: Some activities aren\'t appropriate for younger persons. If the activity requires persons to be the age of majority select "Adult". Otherwise choose "All Ages" or "Kids Only".</string>
    <string name="help_add_time_title">Time and Duration</string>
    <string name="help_add_time">This page contains time related information.\n\nDuration: Enter the minimum and maximum amount of time the activity will take. For example watching a tv show might take 30 minutes.\n\nTime: Enter the time of day during which the activity can be performed. For example certain activities can only be done at night.</string>
    <string name="help_add_environment_title">Environment and Cost</string>
    <string name="help_add_environment">This page contains information related to the activity\'s environment.\n\nEnvironment: Specify whether the activity is indoor, outdoor or around the town (e.g going to a bar downtown). Activities could potentially have more than one environment.\n\nCost: Estimate how much the activity will cost. Also specify whether the cost is total for the whole group or if it is per person.</string>
</resources>