<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<include layout="@layout/header"/>
	<TextView
	   android:id="@+id/tvRegFieldsMandatory"
	   style="@style/BaseView"
	   android:layout_below="@id/rlHeaderBar"
	   android:layout_marginLeft="10dp"
	   android:layout_marginTop="5dp"
	   android:textColor="#FFFFFF"
	   android:textSize="12dp"
	   android:text="@string/tvRegFieldsMandatory">	   
   </TextView>
	<RelativeLayout
        android:id="@+id/rl1"
		style="@style/RegisterRelativeLayout"
		android:layout_below="@id/tvRegFieldsMandatory">
		<TextView
			android:id="@+id/tvUserName"
			style="@style/RegisterLabel"
			android:text="@string/tvUserName">
		</TextView>
		<EditText
			android:id="@+id/etUserName"			
			style="@style/RegisterEditText">
        </EditText>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl2"
        style="@style/RegisterRelativeLayout"
        android:layout_below="@id/rl1">
        <TextView
            android:id="@+id/tvPassword"
            style="@style/RegisterLabel"
            android:text="@string/tvPassword">
        </TextView>
        <EditText
            android:id="@+id/etPassword"            
            style="@style/RegisterEditText"
            android:password="true">
        </EditText>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl3"
        style="@style/RegisterRelativeLayout"
        android:layout_below="@id/rl2">
        <TextView
            android:id="@+id/tvPasswordConfirm"
            style="@style/RegisterLabel"
            android:text="@string/tvPasswordConfirm">
        </TextView>
        <EditText
            android:id="@+id/etPasswordConfirm"            
            style="@style/RegisterEditText"
            android:password="true">
        </EditText>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl4"
        style="@style/RegisterRelativeLayout"
        android:layout_below="@id/rl3">
        <TextView
            android:id="@+id/tvEmail"
            style="@style/RegisterLabel"
            android:text="@string/tvEmail">
        </TextView>
        <EditText
            android:id="@+id/etEmail"            
            style="@style/RegisterEditText">
        </EditText>
    </RelativeLayout>    
    <RelativeLayout
        android:id="@+id/rl5"
        style="@style/RegisterRelativeLayout"
        android:layout_below="@id/rl4">
        <TextView
            android:id="@+id/tvDOB"
            style="@style/RegisterLabel"
            android:text="@string/tvDOB">
        </TextView>
        <Button
            android:id="@+id/bDOB"            
            style="@style/RegisterEditText"
            android:hint="@string/bDOB">
        </Button>
    </RelativeLayout>
    <!-- Recaptcha at some point here -->
    <Button
        android:id="@+id/bRegister"
        style="@style/BaseView"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rl5"
        android:layout_marginTop="10dp"
        android:text="@string/bRegisterAccount">
    </Button>
</RelativeLayout>