<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <ScrollView
        style="@style/BaseView">
        <RelativeLayout
            style="@style/BaseView">
		    <RelativeLayout
		        android:id="@+id/rl1"     
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content">
		        <EditText
		            android:id="@+id/etStreetNumber"
		            style="@style/DialogControl"
		            android:width="120dp"
		            android:numeric="integer">
		        </EditText>
		        <TextView
		            android:id="@+id/tvStreetNumber"
		            style="@style/DialogLabel"
		            android:text="@string/tvStreetNumber">
		        </TextView>
		    </RelativeLayout>   
		    <RelativeLayout
		        android:id="@+id/rl2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/rl1">
		        <EditText
		            android:id="@+id/etStreetName"
		            style="@style/DialogControl"
		            android:width="120dp">            
		        </EditText>
		        <TextView
		            android:id="@+id/tvStreetName"
		            style="@style/DialogLabel"
		            android:text="@string/tvStreetName">
		        </TextView>
		    </RelativeLayout>
		    <RelativeLayout
		        android:id="@+id/rl3"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/rl2">
		        <EditText
		            android:id="@+id/etCity"
		            style="@style/DialogControl"
		            android:width="120dp"
		            android:hint="@string/default_city">
		        </EditText>
		        <TextView
		            android:id="@+id/tvCity"
		            style="@style/DialogLabel"
		            android:text="@string/tvCity">
		        </TextView>
		    </RelativeLayout>
		    <RelativeLayout
		        android:id="@+id/rl4"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@id/rl3">
		        <EditText
		            android:id="@+id/etProvince"
		            style="@style/DialogControl"
		            android:width="120dp"
		            android:hint="@string/default_province">
		        </EditText>
		        <TextView
		            android:id="@+id/tvProvince"
		            style="@style/DialogLabel"
		            android:text="@string/tvProvince">
		        </TextView>
		    </RelativeLayout>
		    <Button
		        android:id="@+id/bEnterAddress"
		        style="@style/DialogButton"
		        android:layout_below="@id/rl4"
		        android:width="120dp"
		        android:text="@string/bEnterAddress">
		    </Button>
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>
