<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
  	    android:id="@+id/rl1"     
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content">
 		<EditText
			android:id="@+id/etUserName"
			style="@style/DialogControl"
			android:inputType="textNoSuggestions"
			android:width="120dp">
		</EditText>
 		<TextView
 			android:id="@+id/tvUserName"
 			style="@style/DialogLabel"
 			android:text="@string/tvUserName">
		</TextView>
    </RelativeLayout>	
  	<RelativeLayout
        android:id="@+id/rl2"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:layout_below="@id/rl1">
		<EditText
			android:id="@+id/etPassword"
			style="@style/DialogControl"
			android:width="120dp"
 			android:password="true">
		</EditText>
		<TextView
 			android:id="@+id/tvPassword"
 			style="@style/DialogLabel"
 			android:text="@string/tvPassword">
		</TextView>
    </RelativeLayout>
	<Button
   		android:id="@+id/bLogin"
   		style="@style/DialogButton"
   		android:layout_below="@id/rl2"
   		android:text="@string/bLogin">
	</Button>
	<RelativeLayout
        android:id="@+id/rl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bLogin">
        <Button
            android:id="@+id/bCreateAccount"
            style="@style/DialogControl"
            android:text="@string/bCreateAccount"
            android:textColor="#FFFFFF"
            android:textSize="11dp"
            android:background="#00000000"
            android:layout_marginLeft="1dp">
        </Button>
        <TextView
            android:id="@+id/tvCreateAccount"
            style="@style/DialogLabel"
            android:textSize="11dp"
            android:text="@string/tvCreateAccount"
            android:layout_marginRight="1dp">
        </TextView>
    </RelativeLayout>
</RelativeLayout>
