<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		<TextView
		    android:id="@+id/tvReason"
		    style="@style/DialogLabel"
		    android:text="@string/tvReason">
		</TextView>
		<EditText
		    android:id="@+id/etReason"
		    style="@style/DialogControl"
		    android:width="150dp">
		</EditText>
	</RelativeLayout>
	<TextView
	   android:id="@+id/tvReasonExample"
       style="@style/DialogLabel"
	   android:layout_below="@id/rl1"
	   android:text="@string/tvReasonExample">
   </TextView>
    <Button
        android:id="@+id/bSubmitFlag"
        style="@style/DialogButton"
        android:layout_below="@id/tvReasonExample"
        android:text="@string/bSubmitFlag"
        android:width="130dp">
    </Button>   
</RelativeLayout>