<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<include layout="@layout/header"/>
	<ViewSwitcher
	   android:id="@+id/vsProfile"
	   android:layout_width="match_parent"
	   android:layout_height="match_parent">
	   <RelativeLayout
	        android:id="@+id/rlNotLoggedInProfile"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent">
			<TextView
				android:id="@+id/tvNotLoggedIn"
				style="@style/ProfileSectionLayout"
				android:text="@string/tvNotLoggedIn">
			</TextView>
			<Button
				android:id="@+id/bLoginProfile"
				style="@style/BaseView"
				android:layout_below="@id/tvNotLoggedIn"
				android:layout_alignParentLeft="true"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="5dp"
				android:text="@string/bLogin">
			</Button>
			<Button
				android:id="@+id/bRegisterProfile"
				style="@style/BaseView"
				android:layout_below="@id/tvNotLoggedIn"
				android:layout_toRightOf="@id/bLoginProfile"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="5dp"
				android:text="@string/bCreateAccount">
			</Button>
		</RelativeLayout>
		<RelativeLayout
		   android:id="@+id/rlLoggedInProfile"
	       android:layout_width="match_parent"
	       android:layout_height="match_parent">
			<ListView
			    android:id="@+id/lvProfileSummary"
			    android:layout_alignParentTop="true"
				android:layout_alignParentLeft="true"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="5dp"
				style="@style/Listview">
			</ListView>
			<TextView
			    android:id="@+id/tvScoreboardHeader"
			    style="@style/DividerProfilePage"
			    android:layout_below="@id/lvProfileSummary"
			    android:text="@string/tvScoreboardHeader">
			</TextView>
			<ListView
			    android:id="@+id/lvRankings"
			    style="@style/ListviewActivityOverview"
			    android:layout_below="@id/tvScoreboardHeader">
			</ListView>
		</RelativeLayout>
	</ViewSwitcher>
</LinearLayout>