<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlAddMain"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include
        android:id="@+id/HeaderBar" 
        layout="@layout/header">
    </include>
    <ScrollView
        style="@style/BaseView"
        android:layout_below="@id/HeaderBar"
        android:layout_marginBottom="50dp">
        <RelativeLayout
            style="@style/BaseView">
		    <RelativeLayout
		        android:id="@+id/rlAddLocation"
		        style="@style/WizardLayout"
		        android:background="@drawable/list_item_gradient">
		        <RadioGroup
		            android:id="@+id/rgAddUseLocation"
		            style="@style/BaseView"
		            android:layout_below="@id/HeaderBar">
		            <RadioButton
		                android:id="@+id/rbAddLocationDisabled"
		                style="@style/BaseView"
		                android:checked="true"
		                android:textColor="#000000"
		                android:text="@string/rbAddLocationDisabled">
		            </RadioButton>
		            <RadioButton
		                android:id="@+id/rbAddLocationEnabled"
		                style="@style/BaseView"
		                android:textColor="#000000"
		                android:text="@string/rbAddLocationEnabled">
		            </RadioButton>
		        </RadioGroup>
		        <Button
		            android:id="@+id/bAddMyLocation"
		            style="@style/StandardLayout"
		            android:layout_below="@id/rgAddUseLocation"
		            android:width="150dp"
		            android:text="@string/tvAddMyLocation">
		        </Button>
		        <Button
		            android:id="@+id/bAddUseMap"
		            style="@style/StandardLayout"
		            android:layout_below="@id/bAddMyLocation"
		            android:width="150dp"
		            android:text="@string/tvAddUseMap">
		        </Button>
		        <Button
		            android:id="@+id/bAddSpecifyAddress"
		            style="@style/StandardLayout"
		            android:layout_below="@id/bAddUseMap"
		            android:width="150dp"
		            android:text="@string/tvAddSpecifyAddress">
		        </Button>
		        <TextView
		            android:id="@+id/tvAddLatDisplay"
		            style="@style/BaseView"
		            android:layout_below="@id/bAddSpecifyAddress"
		            android:textColor="#000000">
		        </TextView>
		        <TextView
		            android:id="@+id/tvAddLongDisplay"
		            style="@style/BaseView"
		            android:layout_below="@id/tvAddLatDisplay"
		            android:textColor="#000000">
		        </TextView>
		    </RelativeLayout>
	    </RelativeLayout>
	</ScrollView>
    <include
        android:id="@+id/NavButtons"
        layout="@layout/add_nav_buttons"
        android:layout_marginTop="-50dp"
        android:layout_alignParentBottom="true">
    </include>
</RelativeLayout> 