<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlDialogContainer"
    style="@style/Dialog"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
	    <EditText
	        android:id="@+id/etNumPeople"
	        style="@style/DialogControl"
	        android:numeric="integer"
	        android:maxLength="3"
	        android:width="50dp">
	    </EditText>
	    <TextView
	        android:id="@+id/etNumPeopleLabel"
	        style="@style/DialogLabel"
	        android:layout_toLeftOf="@id/etNumPeople"
	        android:text="@string/tvNumPeople">
	    </TextView>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1">
	    <CheckBox
	        android:id="@+id/cbChildSafe"
	        style="@style/DialogControl"
	        android:numeric="integer"
	        android:maxLength="3"
	        android:width="50dp">
	    </CheckBox>
	    <TextView
	        android:id="@+id/tvChildSafeLabel"
	        style="@style/DialogLabel"
	        android:layout_toLeftOf="@id/cbChildSafe"
	        android:text="@string/tvChildSafe">
	    </TextView>
    </RelativeLayout>
    <Button
        android:id="@+id/bFilterPeopleOk"
        style="@style/DialogButton"
        android:layout_below="@id/rl2"
        android:text="@string/ok">
    </Button>
</RelativeLayout>